# ColonCurvature

./: AllAnalysis.py  CombineCurvatures.py  ExtractLineScript.py  GenerateResults.py  Metrics.txt  ProcessCurvatureData.py  README.md  SplitSegments.py  Verification.py  main.py  mainCmd.py  mainSlicer.py
Ext/: CMakeLists.txt
Ext/AnalyzeColon/: AnalyzeColon.py  CMakeLists.txt
Ext/AutoSeg/: AutoSeg.ipynb
Ext/CompareColonResults/: CMakeLists.txt  CompareColonResults.py
Ext/NRRDtoNPY/: CMakeLists.txt
Ext/NRRDtoNPY/NRRDtoNPY/: CMakeLists.txt  NRRDtoNPY.py
Ext/PatientComparison/: CMakeLists.txt  PatientComparison.py
Ext/PrepareColonData/: CMakeLists.txt  PrepareColonData.py
Ext/PrepareColonData/Resources/UI/: PrepareColonData.ui
Scripts/: GenerateDetailedPatientStats.py
SeparateScripts/: CombineCurvatures.py  CurvatureModelling.ipynb  CurveFromMarkups.ipynb  ExtractLineScript.py  ProcessCurvatureData.py  README-Original  SplitSegments.py
